Move to setuptools and add requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,6 @@ style = pep440
 versionfile_source = nsls2mm/_version.py
 versionfile_build = nsls2mm/_version.py
 tag_prefix = v
+
+[flake8]
+exclude = ./versioneer.py
